Fix for form drop down overflow problem.
Just needed an alternative to overflow: hidden so form elements (such as the drop down) will not be cut off.

--- a/system/cms/themes/pyrocms/css/workless/workless.css
+++ b/system/cms/themes/pyrocms/css/workless/workless.css
@@ -616,7 +616,7 @@ input:invalid, textarea:invalid { background-color: #f0dddd; }
 
 .form_inputs {
 	width: 100%;
-	overflow: hidden;
+  overflow: visible;
 }
 .move-handle {display: none;}
 .form_inputs fieldset {
@@ -628,7 +628,13 @@ input:invalid, textarea:invalid { background-color: #f0dddd; }
 	height: 100%;
 	margin-bottom: 0;
 	padding-bottom: 0;
-	overflow: hidden;
+}
+.form_inputs > ul:after {
+  content: '.';
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
 }
 .form_inputs fieldset > ul > li,
 .form_inputs > ul > div > li,
